src/main/resources/static/css/stl-parks.css
td, th {
    padding: 10px;
}

tr:nth-child(odd) {
    background-color: #e4e4e4;
}

table.park-listing {
    margin: 30px auto;
    border: 1px solid #e4e4e4;
    width: 80%;
}

table.park-listing td:first-child {
    font-weight: bold;
}

table.park-listing td:last-child {
    width: 80%;
}

.search-button {
    text-align:center;
}

.search-button input{
    width: 25%;
    text-align: center;
}

.view-all-link{
    font-size: 1.2em;
}

.photo {
    width: 100%;
}

.jumbotron {
background-color: #646970 !important;
}

.logo{
width: 40%;
margin-top: -5%;
}

.interactive {
padding-top: 5%;
color: white;
}

.find-my-park-btn {
    width: 100%;
    height: 50px;
    text-align: center;
}

.main-desc {
    font-size: 1.1em;
    text-align: justify;
}

.login-label{
color: white;

}

.park-name {
font-size: 1.2em;
font-weight:bold;
}

.amenity-list{
display: inline-block;
list-style-type: square;
}

.footer{
position: absolute;
width: 100%;
bottom: 0;
height: 2.5rem;
text-align: center;

}

.page-container {
  position: relative;
  min-height: 100vh;

}

.content-wrap {
  padding-bottom: 2.5rem;    /* Footer height */
}

.card:nth-child(3n+2){
background: #FF8800 !important;
}

.card:nth-child(3n+0){
background: #1C2331 !important;
}

.add-park-btn {
width:45%;
}

.remove-park-btn {
width:45%;
}

